# blyadskiy-siaod

1-bitwise-operations/: CMakeLists.txt  bitwise-operations.cpp  counting-sort.cpp
1-bitwise-operations/tests/: 1_small_10.txt  2_medium_1000.txt  3_medium_10_000.txt
2-file-processing/: CMakeLists.txt  structure-serialization.cpp
2-file-processing/2-1-divide-by-min/: main.cpp
2-file-processing/2-1-divide-by-min/file_utils/: file_utils.cpp  file_utils.hpp
2-file-processing/binary-file/: main.cpp
2-file-processing/binary-file/utils/: utils.cpp  utils.hpp
2-file-processing/process-text-file/: main.cpp
2-file-processing/process-text-file/lib/: file.cpp  file.h
2-file-processing/text-file/: main.cpp
2-file-processing/text-file/file_utils/: file_utils.cpp
3-hash-table/: CMakeLists.txt  controller.hpp  main.cpp
3-hash-table/binary/: binary.cpp  binary.hpp
3-hash-table/hash_table/: hash_map.cpp  hash_map.hpp
3-hash-table/tests/: benchmark.cpp  test_hash_map.cpp
4-binary-tree/: .gitignore  CMakeLists.txt  main.cpp
